fix code view on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -251,9 +251,15 @@ a.a-copyright:visited {
 }
 
 @media screen and (max-width: 600px) {
-  pre, pre code, .highlight {
+  pre {
+    overflow-x: auto;
     white-space: pre-wrap;
-    word-break: break-word;
-    overflow-x: hidden;
+    word-wrap: break-word;
+  }
+
+  pre code {
+    display: block;
+    white-space: inherit;
   }
 }
+
